[gd_scene load_steps=6 format=2]

[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menues/Buttons/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menues/Menu_Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menues/Pause_Menu/Pause_Menu.gd" type="Script" id=4]


[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="Pause_Menu" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 262.0
margin_top = 49.0
margin_right = 762.0
margin_bottom = 549.0
rect_min_size = Vector2( 500, 500 )

[node name="TextureRect" parent="Control" instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 500.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Take a Break"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 200.0

[node name="Continue" parent="Control/VBoxContainer/CenterContainer" instance=ExtResource( 2 )]
margin_left = 175.0
margin_right = 325.0

[node name="Label" parent="Control/VBoxContainer/CenterContainer/Continue" index="0"]
text = "Continue"

[node name="CenterContainer2" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 350.0

[node name="Back_To_Menu" parent="Control/VBoxContainer/CenterContainer2" instance=ExtResource( 2 )]
margin_left = 175.0
margin_right = 325.0

[node name="Label" parent="Control/VBoxContainer/CenterContainer2/Back_To_Menu" index="0"]
margin_left = 20.0
margin_right = 21.0
rect_scale = Vector2( 0.7, 1 )
text = "Back To Menu"
[connection signal="pressed" from="Control/VBoxContainer/CenterContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/CenterContainer2/Back_To_Menu" to="." method="_on_Back_To_Menu_pressed"]

[editable path="Control/VBoxContainer/CenterContainer/Continue"]

[editable path="Control/VBoxContainer/CenterContainer2/Back_To_Menu"]
